--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,6 +6,11 @@
     height:40px;
     border-radius: 15px;
     font-size: @fontsize;
+    @media @phone {
+        width: 100%;
+        height: 75px;
+        border-radius: 10px;
+    }
 }
 .btn-hover(){
     &:hover{
