--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,6 +15,9 @@ nav{
             color:@main-font-color;
             font-weight: bold;
         }
+        @media @phone{
+            width: 80%;
+        }
     }
     h1{
         font-size: xxx-large;
