--- a/less/variables.less
+++ b/less/variables.less
@@ -26,3 +26,4 @@
 @dark-grey: #202020;
 @white: #FFFFFF;
 // Mobile var
+@phone: ~'(max-width: 500px)';
